Fixed Show more text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					ultralight gear, bike packing, camping, hiking, trekking, traveling, or exploring of any kind, then
 					Byebye is for you.
 				</p>
-				<a href="#more_byebye">more</a>
+				<a href="#more_byebye">Show more</a>
 				<hr />
 				<h3>Operator365</h3>
 				<span class="image main"><img src="images/op365.png" alt="" /></span>
@@ -116,7 +116,7 @@
 					clients have been able to spend more time growing their businesses and less
 					time following the paper trail that comes with manual, paper-based systems.
 				</p>
-				<a href="#more_op365">more</a>
+				<a href="#more_op365">Show more</a>
 				<hr />
 				<h3>Lok – Secure and Uncensored</h3>
 				<span class="image main"><img src="images/lok.png" alt="" /></span>
@@ -125,7 +125,7 @@
 					to surveillance and censorship – with Lok, your conversations remain encrypted and beyond the reach
 					of prying eyes.
 				</p>
-				<a href="#more_lok">more</a>
+				<a href="#more_lok">Show more</a>
 				<hr />
 				<h3>Kosher Value</h3>
 				<span class="image main"><img src="images/kosher.png" alt="" /></span>
