--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
-                  <span class="number number-counter" data-number="72">0</span>
+                  <span class="number number-counter" data-number="75">0</span>
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">Android</span>
@@ -425,7 +425,45 @@
                   <span class="number number-counter" data-number="98">0</span>
                   <span class="append-text">%</span>
                 </span>
-                <span class="counter-label">Agile</span>
+                <span class="counter-label">Agile / Clean Architecture</span>
+              </div>
+            </div><br />
+            <br />
+            <br /><br /><br />
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="88">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">GraphQL</span>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="81">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">Google Cloud Serivce</span>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="86">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">AWS Services</span>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="97">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">GitHub / Jira</span>
               </div>
             </div>
           </div>
