Fixed nav in sub screen

--- a/portfolio_helpozzy.html
+++ b/portfolio_helpozzy.html
@@ -48,29 +48,9 @@
           <div class="row align-items-center justify-content-between text-left">
             <div class="col-md-5 text-right">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
-                <li class="has-children">
-                  <a href="index.html#home-section" class="nav-link">Home</a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="index.html">Hero Image BG</a>
-                    </li>
-                    <li>
-                      <a href="index-video.html">Video BG</a>
-                    </li>
-                    <li>
-                      <a href="index-hero-slider.html">Hero Slider</a>
-                    </li>
-                    <li>
-                      <a href="index-sidebar-menu.html">Sidebar Menu</a>
-                    </li>
-                    <li>
-                      <a href="index-right-menu.html">Right Menu</a>
-                    </li>
-                  </ul>
-                </li>
+                <li><a href="index.html#home-section" class="nav-link">Home</a></li>
                 <li><a href="index.html#portfolio-section" class="nav-link">Portfolio</a></li>
                 <li><a href="index.html#about-section" class="nav-link">About</a></li>
-                <li><a href="index.html#services-section" class="nav-link">Services</a></li>
               </ul>
             </div>
             <div class="site-logo pos-absolute">
@@ -80,7 +60,6 @@
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li><a href="index.html#skills-section" class="nav-link">Skills</a></li>
                 <li><a href="index.html#testimonial-section" class="nav-link">Testimonial</a></li>
-                <li><a href="index.html#journal-section" class="nav-link">Journal</a></li>
                 <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
               </ul>
 
@@ -100,7 +79,7 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Modern Building</h1>
+              <h1 class="heading" data-aos="fade-up">Reworking</h1>
               <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
                 far from the countries.</h2>
             </div>
@@ -123,15 +102,17 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Modern Building</h2>
+            <h2 class="heading-portfolio-single-h2">Reworking</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/work_3_a_full.jpg" data-fancybox="gal"><img src="images/work_3_a_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_3_full.jpg" data-fancybox="gal"><img src="images/work_3_full.jpg" alt="Image"
+                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/work_2_full.jpg" alt="Image"
                       class="img-fluid"></a></p>
+                <p><a href="images/work_2_a_full.jpg" data-fancybox="gal"><img src="images/work_2_a_full.jpg"
+                      alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/work_2_b_full.jpg" data-fancybox="gal"><img src="images/work_2_b_full.jpg"
+                      alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
