--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <div id="posts" class="row gutter-isotope-item">
               <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
-                <a href="portfolio-single-2.html"
+                <a href="portfolio_wsac.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="1">
                   <div class="overlay">
                     <div class="portfolio-item-content">
@@ -160,7 +160,7 @@
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-3.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
+                <a href="portfolio_helpozzy.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
                   data-id="2">
                   <div class="overlay">
                     <div class="portfolio-item-content">
@@ -173,7 +173,7 @@
               </div>
 
               <div class="item web packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html"
+                <a href="portfolio_byebye.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
                   <div class="overlay">
                     <div class="portfolio-item-content">
@@ -186,7 +186,7 @@
               </div>
 
               <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-3.html"
+                <a href="portfolio_equipr.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="4">
                   <div class="overlay">
                     <div class="portfolio-item-content">
@@ -199,7 +199,7 @@
               </div>
 
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html"
+                <a href="portfolio_lok.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="5">
                   <div class="overlay">
                     <div class="portfolio-item-content">
@@ -212,7 +212,7 @@
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-2.html"
+                <a href="portfolio_koshervalue.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
                   <div class="overlay">
                     <div class="portfolio-item-content">
@@ -224,7 +224,7 @@
                 </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-3.html"
+                <a href="portfolio_chinesepod.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
                   <div class="overlay">
                     <div class="portfolio-item-content">
