Removed extra files

--- a/portfolio_wsac.html
+++ b/portfolio_wsac.html
@@ -206,8 +206,8 @@
                   </div>
 
                   <div class="testimonial-author-info">
-                    <img src="images/person_man_1.jpg" alt="Image">
-                    <h3>Eric Ingram</h3>
+                    <img src="images/nk.jpeg" alt="Image">
+                    <h3>Narayanan NK</h3>
                     <span class="d-block position">Product Designer @facebook</span>
                   </div>
 
