--- a/portfolio_wsac.html
+++ b/portfolio_wsac.html
@@ -79,9 +79,8 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reshape</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
-                far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">We Swap Any Car</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">SWIPE - LIKE - UNITE</h2>
             </div>
 
           </div>
@@ -101,38 +100,26 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
-            <h2 class="heading-portfolio-single-h2">Reshape</h2>
+            <h2 class="heading-portfolio-single-h2">WSAC</h2>
 
             <div class="row gutter-v4 align-items-stretch mb-5">
               <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
 
-                <a href="images/post_1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal"
+                <a href="images/wsac.png" class="grid-item blog-item w-100 h-100" data-fancybox="gal"
                   data-caption="A nice caption will be place here">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>A nice caption will be place here</h3>
+                      <h3>WSAC aims to create a platform for buying, selling, and swapping cars in a unique and
+                        efficient way. It goes beyond traditional classifieds by adding interactive features and
+                        fostering a community feel.</h3>
                     </div>
                   </div>
-                  <img src="images/post_1.jpg" class="lazyload" alt="Image" />
+                  <img src="images/wsac.png" class="lazyload" alt="Image" />
                 </a>
 
               </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_2.jpg" class="lazyload" alt="Image" />
-                </a>
-              </div>
 
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-
-                <a href="images/post_3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_3.jpg" class="lazyload" alt="Image" />
-                </a>
-
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+              <!-- <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
                 <a href="images/post_4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay"></div>
                   <img src="images/post_4.jpg" class="lazyload" alt="Image" />
@@ -144,7 +131,7 @@
                   <div class="overlay"></div>
                   <img src="images/post_5.jpg" class="lazyload" alt="Image" />
                 </a>
-              </div>
+              </div> -->
 
             </div>
 
@@ -154,40 +141,71 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Project Date</span>
-                      <span class="detail-val">March 9th, 2020</span>
+                      <span class="detail-val">February 1st, 2023 to January 15th, 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Role</span>
-                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                      <span class="detail-val"><a>Flutter Developer</a>, <a>Application Developer</a></span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Client</span>
-                      <span class="detail-val">unslate</span>
+                      <span class="detail-val">Jamie Kingsley</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="#">https:///</a></span>
+                      <span class="detail-val"><a href="https://www.weswapanycar.com/">weswapanycar.com</a></span>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 pr-md-5">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                  language ocean. A small river named Duden flows by their place and supplies it with the necessary
-                  regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-                </p>
+                <h4>Features:</h4>
+                <li>Swapping System: Users can list their cars for swapping and browse through other
+                  available vehicles, searching by specific criteria or browsing curated selections. This
+                  incentivizes upgrades or changes without incurring significant expense. </li>
+                <li>Enhanced Listings: Instead of static text and photos, listings can include video
+                  workarounds, virtual tours, and performance data reports, giving buyers a more immersive
+                  experience.</li>
+                <li>Community Hub: Create a forum or chat space for users to discuss cars, share expertise, organize
+                  repair workshops, and find other car enthusiasts in their area.</li>
+                <li>Valuation Tool: Integrate an AI-powered car valuation tool to help users determine fair
+                  market prices for buying, selling, and swapping.</li>
+                <li>Escrow Service: Offer an optional escrow service for secure transactions, protecting both
+                  buyers and sellers from fraud.</li>
+
+                <br />
+                <h4>Benefits:</h4>
+                <li>Simplifies the car buying/selling process: Provides a platform for efficient transactions and
+                  removes the hassle of traditional methods.</li>
+                <li>Promotes sustainability: Encourages car reuse and reduces the environmental impact of
+                  vehicle production and disposal.</li>
+                <li>Builds a community: Creates a space for car enthusiasts to connect, share knowledge, and
+                  support each other.</li>
+                <li>Offers unique value: Swapping system stands out from traditional platforms and potentially
+                  attracts a wider audience.</li>
+                <br />
+                <br />
+
               </div>
               <div class="col-md-6 pl-md-5">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                  far World of Grammar.</p>
+                <h4>Target Audience:</h4>
+                <li>Car enthusiasts of all ages and levels of expertise.</li>
+                <li>Individuals looking to upgrade their car without a significant financial burden.</li>
+                <li>Environmentally conscious consumers seeking sustainable car ownership options.</li>
+                <br />
+                <h4>Monetization:</h4>
+                <li>Charge a listing fee for cars, with premium options for enhanced visibility.</li>
+                <li>Implement a commission-based system for successful swaps and sales facilitated through
+                  the platform.</li>
+                <li>Partner with relevant businesses for sponsored content and advertising opportunities.</li>
+                <br />
+                <br />
               </div>
             </div>
 
@@ -197,18 +215,15 @@
                   <div class="testimonial-inner-bg">
                     <span class="quote">&ldquo;</span>
                     <blockquote>
-                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-                      live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a
-                      large language ocean. A small river named Duden flows by their place and supplies it with the
-                      necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into
-                      your mouth.
+                      Divyanshu is a team player who can understand the dynamics of team rapidly and work accordingly!
+                      Swift learning and he is being accountable for the tasks taken!
                     </blockquote>
                   </div>
 
                   <div class="testimonial-author-info">
                     <img src="images/nk.jpeg" alt="Image">
                     <h3>Narayanan NK</h3>
-                    <span class="d-block position">Product Designer @facebook</span>
+                    <span class="d-block position">Business Consultant Level-2 @Emvigo Technologies</span>
                   </div>
 
                 </div>
