Added helpozzy project details

--- a/portfolio_helpozzy.html
+++ b/portfolio_helpozzy.html
@@ -79,11 +79,10 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reworking</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
-                far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">Helpozzy</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Helpozzy is an mobile app to Connecting
+                Students, Volunteers, Donors and Organizations to build a strong community.</h2>
             </div>
-
           </div>
         </div>
 
@@ -101,35 +100,42 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
-
-            <h2 class="heading-portfolio-single-h2">Reworking</h2>
-
+            <h2 class="heading-portfolio-single-h2">Helpozzy</h2>
             <div class="row justify-content-between align-items-stretch">
-
               <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/work_2_full.jpg" alt="Image"
+                <p><a href="images/helpozzy.png" data-fancybox="gal"><img src="images/helpozzy.png" alt="Image"
                       class="img-fluid"></a></p>
-                <p><a href="images/work_2_a_full.jpg" data-fancybox="gal"><img src="images/work_2_a_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_2_b_full.jpg" data-fancybox="gal"><img src="images/work_2_b_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
+                <div class="col-md-12 mb-4">
+                  <div class="detail-v1">
+                    <span class="detail-label">Project Description</span>
+                    <h4>For Students:</h4>
+                    <li>Students can participate in various local and virtual volunteering projects to earn hours
+                      through multiple organizations. They can also set goals toward earning hours and track them
+                      for schools.
+                    </li>
+                    <br />
+                    <h4>For Volunteers:</h4>
+                    <li>As an independent volunteer, users can develop and participate in projects, work with
+                      nonprofits, and personalize how they want to help their community.</li>
+                    <br />
+                    <h4>For Donors:</h4>
+                    <li>Donors are given the oppurtunity to provide monetary and physical donations towards projects
+                      and groups of their choosing.</li>
+                    <br />
+                    <h4>For Organizations:</h4>
+                    <li>Organizations are provided a platform to recruit volunteers, promote projects, keep
+                      inventory of donations, and many other features.</li>
+                    <br />
+                  </div>
+                </div>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
                   <div class="row">
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
-                        <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                          there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-                          Semantics, a large language ocean.</p>
-                      </div>
-                    </div>
-
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
                         <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
+                        <span class="detail-val">August 10st, 2021 to November 30th,2022</span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
@@ -141,13 +147,14 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
+                        <span class="detail-val">Siddharth Paleja - Founder & President</span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
+                        <span class="detail-val"><a
+                            href="https://www.helpingforgood.org/">www.helpingforgood.org</a></span>
                       </div>
                     </div>
                   </div>
@@ -169,11 +176,9 @@
             <div class="footer-site-logo"><a href="#">DK<span>.</span></a></div>
 
             <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a href="https://www.linkedin.com/in/divyanshu-korat-943599153/">LinkedIn</a></li>
+              <li><a href="https://github.com/DK024-Dev">GitHub</a></li>
+              <li><a href="https://www.instagram.com/dk._.1410/">Instagram</a></li>
             </ul>
 
             <p class="site-copyright">
