--- a/portfolio_wsac.html
+++ b/portfolio_wsac.html
@@ -244,11 +244,9 @@
             <div class="footer-site-logo"><a href="#">DK<span>.</span></a></div>
 
             <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a href="https://www.linkedin.com/in/divyanshu-korat-943599153/">LinkedIn</a></li>
+              <li><a href="https://github.com/DK024-Dev">GitHub</a></li>
+              <li><a href="https://www.instagram.com/dk._.1410/">Instagram</a></li>
             </ul>
 
             <p class="site-copyright">
