--- a/portfolio_byebye.html
+++ b/portfolio_byebye.html
@@ -79,9 +79,9 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reshape</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
-                far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">Byebye: Organize.Declutter.</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Your Stuff. Your Lists. Organize.
+                Declutter.</h2>
             </div>
 
           </div>
@@ -101,48 +101,67 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
-            <h2 class="heading-portfolio-single-h2">Reshape</h2>
+            <h2 class="heading-portfolio-single-h2">Byebye: Organize.Declutter.</h2>
 
             <div class="row gutter-v4 align-items-stretch mb-5">
-              <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
 
-                <a href="images/post_1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal"
-                  data-caption="A nice caption will be place here">
+              <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
+                <iframe width="100%" height="300" src="https://www.youtube.com/embed/_b12LEjVd-k?si=hgaWQiKxE_H5V5ku"
+                  frameborder="0" allowfullscreen ng-show="showvideo">
+                </iframe>
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/byebye1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>A nice caption will be place here</h3>
+                      <h3>Stay updated with community news.</h3>
                     </div>
                   </div>
-                  <img src="images/post_1.jpg" class="lazyload" alt="Image" />
-                </a>
-
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_2.jpg" class="lazyload" alt="Image" />
+                  <img src="images/byebye1.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
 
-                <a href="images/post_3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_3.jpg" class="lazyload" alt="Image" />
+                <a href="images/byebye2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3>Your stuff, your lists, one unique inventory</h3>
+                    </div>
+                  </div>
+                  <img src="images/byebye2.jpg" class="lazyload" alt="Image" />
                 </a>
 
               </div>
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_4.jpg" class="lazyload" alt="Image" />
+                <a href="images/byebye3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3>Breakdown of your inventory</h3>
+                    </div>
+                  </div>
+                  <img src="images/byebye3.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_5.jpg" class="lazyload" alt="Image" />
+                <a href="images/byebye4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3>Get in contact easy. Socialize.</h3>
+                    </div>
+                  </div>
+                  <img src="images/byebye4.jpg" class="lazyload" alt="Image" />
+                </a>
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/byebye5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3>Get inspired by others like you</h3>
+                    </div>
+                  </div>
+                  <img src="images/byebye5.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
@@ -154,35 +173,45 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Project Date</span>
-                      <span class="detail-val">March 9th, 2020</span>
+                      <span class="detail-val">April 1st, 2019 to January 31st, January</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Role</span>
-                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                      <span class="detail-val"><a>Flutter Developer</a>, <a>Application Developer</a></span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Client</span>
-                      <span class="detail-val">unslate</span>
+                      <span class="detail-val">Marius Pruna</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="#">https:///</a></span>
+                      <span class="detail-val"><a href="https://byebye.io/">www.byebye.io</a></span>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 pr-md-5">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                  language ocean. A small river named Duden flows by their place and supplies it with the necessary
-                  regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-                </p>
+                <div class="detail-v1">
+                  <span class="detail-label">Project Description</span>
+                  <p>Byebye is an exceptional home organizing app that has been designed for minimalists who want to
+                    streamline their lives and declutter their homes. The app's minimalist interface allows users to
+                    easily categorize and organize their belongings, making it easier for them to keep track of their
+                    possessions and reduce clutter. With Byebye, users can easily manage their belongings and get rid of
+                    the things that no longer serve them, making room for the things that do. The app provides users
+                    with an easy-to-use interface that makes it simple to categorize items, sort them by room, and
+                    decide which items are essential and which ones can be discarded. With Byebye, users can easily
+                    track their progress and see how much they've decluttered over time. The app also provides tips and
+                    tricks on how to organize a minimalist home, making it an indispensable tool for anyone who wants to
+                    simplify their life and reduce the amount of clutter in their living space. Overall, Byebye is the
+                    best home organizing app for minimalists who want to live a more streamlined and clutter-free life.
+                  </p>
+                </div>
               </div>
               <div class="col-md-6 pl-md-5">
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
@@ -197,18 +226,21 @@
                   <div class="testimonial-inner-bg">
                     <span class="quote">&ldquo;</span>
                     <blockquote>
-                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-                      live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a
-                      large language ocean. A small river named Duden flows by their place and supplies it with the
-                      necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into
-                      your mouth.
+                      I’ve had the pleasure to work with Divyanshu for almost a year on a project that started from an
+                      idea and ended up as a beautiful app, downloaded and appreciated by tens of thousands of people
+                      worldwide. Divyanshu is an excellent team player. His skills and professional expertise brought
+                      value to the project with each iteration along the way. His openness to collaborate, his attention
+                      to detail, and his willingness to go the extra mile every time, are only a few of the qualities
+                      that make him a valuable asset to any team.
+                      <br />
+                      Thank you, Divyanshu! Keep up the good work!
                     </blockquote>
                   </div>
 
                   <div class="testimonial-author-info">
                     <img src="images/marius.jpeg" alt="Image">
                     <h3>Marius Pruna</h3>
-                    <span class="d-block position">Product Designer @facebook</span>
+                    <span class="d-block position">Owner @Byebye</span>
                   </div>
 
                 </div>
@@ -229,11 +261,9 @@
             <div class="footer-site-logo"><a href="#">DK<span>.</span></a></div>
 
             <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a href="https://www.linkedin.com/in/divyanshu-korat-943599153/">LinkedIn</a></li>
+              <li><a href="https://github.com/DK024-Dev">GitHub</a></li>
+              <li><a href="https://www.instagram.com/dk._.1410/">Instagram</a></li>
             </ul>
 
             <p class="site-copyright">
