--- a/portfolio_helpozzy.html
+++ b/portfolio_helpozzy.html
@@ -141,7 +141,7 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                        <span class="detail-val"><a>Flutter Developer</a>, <a>Application Developer</a></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
