--- a/portfolio_byebye.html
+++ b/portfolio_byebye.html
@@ -196,6 +196,31 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-md-6 pl-md-5">
+                <li>Your stuff, your lists, one unique inventory</li>
+                <p>Use the app to create lists and start adding items. Once done, you'll get a clear view of what is in
+                  and what must goout.</p><br />
+                <li>Labels</li>
+                <p>One item fits more than one list? No worries. Add labels to avoid duplicates and sort your things
+                  based on their destination</p><br />
+                <li>Wishlist</li>
+                <p>Don’t forget the items you’re interested in! Add them to your wishlist, and move them in your
+                  inventory once they’re purchased</p><br />
+                <li>Direct chat</li>
+                <p>Got your eyes on something you wish to purchase in the near future? Ask people who already use
+                  something similar if you should do it or not.</p><br />
+                <li>Community</li>
+                <p>Join our social media channels to get in touch on other platforms as well. Invite your friends to
+                  join our fast growing community!</p><br />
+                <li>Regrets</li>
+                <p>Use the Byebye Regret option to keep track of everything that doesn’t bring joy anymore. Move them to
+                  the Marketplace, your clutter might be someone else’s must-have stuff</p><br />
+                <li>Marketplace</li>
+                <p>Search what other people in your area are willing to sell or swap or donate. See what's available
+                  around you. Or where you want to relocate soon.</p><br />
+              </div>
+
               <div class="col-md-6 pr-md-5">
                 <div class="detail-v1">
                   <span class="detail-label">Project Description</span>
@@ -212,11 +237,6 @@
                     best home organizing app for minimalists who want to live a more streamlined and clutter-free life.
                   </p>
                 </div>
-              </div>
-              <div class="col-md-6 pl-md-5">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                  far World of Grammar.</p>
               </div>
             </div>
 
