--- a/portfolio_equipr.html
+++ b/portfolio_equipr.html
@@ -169,11 +169,9 @@
             <div class="footer-site-logo"><a href="#">DK<span>.</span></a></div>
 
             <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a href="https://www.linkedin.com/in/divyanshu-korat-943599153/">LinkedIn</a></li>
+              <li><a href="https://github.com/DK024-Dev">GitHub</a></li>
+              <li><a href="https://www.instagram.com/dk._.1410/">Instagram</a></li>
             </ul>
 
             <p class="site-copyright">
@@ -182,10 +180,8 @@
               Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
-              </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i>
-              by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-
+              </script> All rights reserved | <i class="icon-heart" aria-hidden="true"></i>
+              by DIVYANSHUKORAT.DEV</a>
             </p>
 
           </div>
