Added the kosher details

--- a/portfolio_koshervalue.html
+++ b/portfolio_koshervalue.html
@@ -79,9 +79,9 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Modern Building</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
-                far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">Kosher Value</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Kosher Value delivers the highest standards
+                of kosher, quality, and customer service under one roof.</h2>
             </div>
 
           </div>
@@ -102,14 +102,20 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Modern Building</h2>
+            <h2 class="heading-portfolio-single-h2">Kosher Value</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
-              <div class="col-lg-8">
-                <p><a href="images/work_3_a_full.jpg" data-fancybox="gal"><img src="images/work_3_a_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_3_full.jpg" data-fancybox="gal"><img src="images/work_3_full.jpg" alt="Image"
+              <div class="col-lg-4">
+                <p><a href="images/kosher_logo.jpg" data-fancybox="gal"><img src="images/kosher_logo.jpg" alt="Image"
+                      class="img-fluid">/a></p>
+                <p><a href="images/kosher2.jpg" data-fancybox="gal"><img src="images/kosher2.jpg" alt="Image"
+                      class="img-fluid"></a></p>
+              </div>
+              <div class="col-lg-4">
+                <p><a href="images/kosher1.jpg" data-fancybox="gal"><img src="images/kosher1.jpg" alt="Image"
+                      class="img-fluid"></a></p>
+                <p><a href="images/kosher3.jpg" data-fancybox="gal"><img src="images/kosher3.jpg" alt="Image"
                       class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
@@ -118,34 +124,37 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                          there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-                          Semantics, a large language ocean.</p>
+                        <p>Kosher Value delivers the highest standards of kosher, quality, and customer service under
+                          one roof. We are a national foodservice brand committed to a higher value for lower prices and
+                          inventory independence. We carry the largest variety of kosher brands and offer delivery
+                          throughout the United States.</p>
                       </div>
                     </div>
 
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
+                        <span class="detail-val">March 9th, 2020 to July 23rd, 2020</span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                        <span class="detail-val"><a>Flutter Developer</a>, <a>Application Developer</a></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
+                        <span class="detail-val">DragonInc</span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
+                        <span class="detail-val"><a
+                            href="https://play.google.com/store/apps/details?id=com.app.koshervalue&hl=en_IN&gl=US">Kosher
+                            Value - Play Store</a></span>
                       </div>
                     </div>
                   </div>
@@ -173,8 +182,6 @@
             </ul>
 
             <p class="site-copyright">
-
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>
                 (new Date().getFullYear());
