Added lok details

--- a/portfolio_lok.html
+++ b/portfolio_lok.html
@@ -79,9 +79,7 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reworking</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
-                far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">Lok - Secure & Uncensored</h1>
             </div>
 
           </div>
@@ -102,57 +100,96 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Reworking</h2>
+            <h2 class="heading-portfolio-single-h2">Lok - Secure & Uncensored</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/work_2_full.jpg" alt="Image"
+                <p><a href="images/lok1.jpg" data-fancybox="gal"><img src="images/lok1.jpg" alt="Image"
                       class="img-fluid"></a></p>
-                <p><a href="images/work_2_a_full.jpg" data-fancybox="gal"><img src="images/work_2_a_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_2_b_full.jpg" data-fancybox="gal"><img src="images/work_2_b_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
-              </div>
-              <div class="col-lg-4 pl-lg-5">
-                <div class="unslate_co--sticky">
-                  <div class="row">
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                          there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-                          Semantics, a large language ocean.</p>
+                <div class="col-lg-10 pl-lg-5">
+                  <div class="unslate_co--sticky">
+                    <div class="row">
+                      <div class="col-md-12 mb-4">
+                        <div class="detail-v1">
+                          <span class="detail-label">Project Description</span>
+                          <p>Lok is a revolutionary application designed to provide users with a secure and uncensored
+                            platform for communication and information sharing. Built on cutting-edge encryption
+                            technology and a decentralized network infrastructure, Lok ensures that your conversations
+                            and data remain private, secure, and free from third-party interference.</p>
+                          <h5>Key Features:</h5>
+                          <li>End-to-End Encryption: Lok employs state-of-the-art end-to-end encryption to secure your
+                            messages, calls, and files from unauthorized access. This means that only you and the
+                            intended recipient can read or access the content.</li>
+                          <li>Decentralized Network: Unlike traditional messaging apps that rely on centralized servers,
+                            Lok operates on a decentralized network, distributing data across multiple nodes. This
+                            architecture enhances security by eliminating single points of failure and reducing the risk
+                            of data breaches.</li>
+                          <li>Uncensored Communication: With Lok, users can communicate freely without fear of
+                            censorship or surveillance. The decentralized nature of the platform ensures that no central
+                            authority can control or monitor your conversations, allowing for unrestricted expression of
+                            ideas and opinions.</li>
+                          <li>Anonymous Sign-Up: Lok offers anonymous sign-up options, allowing users to create accounts
+                            without revealing their personal information. This feature enhances privacy and protects
+                            user identities from being tracked or compromised.</li>
+                          <li>Multi-Platform Support: Lok is available on multiple platforms, including iOS, Android,
+                            and desktop devices, ensuring seamless communication across different devices and operating
+                            systems.</li>
+                          <li>File Sharing: Share files of any size securely with other users on the Lok platform.
+                            Whether it's documents, images, videos, or any other file type, you can exchange them with
+                            confidence knowing that your data is protected by robust encryption.</li>
+                          <li>Customizable Security Settings: Lok allows users to customize their security settings
+                            according to their preferences. From choosing encryption protocols to managing device
+                            permissions, users have full control over their security settings to ensure maximum
+                            protection.</li>
+                          <li>Open Source: Lok is built on open-source technology, allowing security experts and
+                            developers to audit the code for vulnerabilities and contribute to its improvement. This
+                            transparency enhances trust and ensures that Lok remains at the forefront of security
+                            innovation.</li>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
+                      <div class="col-md-12 mb-4">
+                        <div class="detail-v1">
+                          <span class="detail-label">Project Date</span>
+                          <span class="detail-val">Nov 19th, 2019 to March 23rd, 2020</span>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                      <div class="col-md-12 mb-4">
+                        <div class="detail-v1">
+                          <span class="detail-label">Role</span>
+                          <span class="detail-val"><a>Flutter Developer</a>, <a>Application Developer</a></span>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
+                      <div class="col-md-12 mb-4">
+                        <div class="detail-v1">
+                          <span class="detail-label">Client</span>
+                          <span class="detail-val">Shan Huang</span>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
+                      <div class="col-md-12 mb-4">
+                        <div class="detail-v1">
+                          <span class="detail-label">Visit</span>
+                          <span class="detail-val"><a
+                              href="https://appadvice.com/app/lok-secure-and-uncensored/1470199852">Lok: App
+                              Store</a></span>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+              <div class="col-lg-4">
+                <p><a href="images/lok2.jpeg" data-fancybox="gal"><img src="images/lok2.jpeg" alt="Image"
+                      class="img-fluid"></a></p>
+                <p><a href="images/lok3.jpeg" data-fancybox="gal"><img src="images/lok3.jpeg" alt="Image"
+                      class="img-fluid"></a></p>
+                <p><a href="images/lok4.jpeg" data-fancybox="gal"><img src="images/lok4.jpeg" alt="Image"
+                      class="img-fluid"></a></p>
+                <p><a href="images/lok5.jpeg" data-fancybox="gal"><img src="images/lok5.jpeg" alt="Image"
+                      class="img-fluid"></a></p>
+              </div>
+
 
             </div>
 
@@ -175,8 +212,6 @@
             </ul>
 
             <p class="site-copyright">
-
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>
                 (new Date().getFullYear());
